--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Menú Lateral -->
 <div>
     <p>
-        <button mat-button>Inicio de Carpeta</button>
+        <button [routerLink]="[ '/public-page'] " routerLinkActive="true " mat-button>Carpetas de Investigación</button>
     </p>
 
     <p>
@@ -14,6 +14,7 @@
 
     <p>
         <button mat-button>Investigación de Control<br> Judicial</button>
+        <a [routerLink]="[ '/public-page'] " routerLinkActive="true ">[PUBLIC-PAGE]</a>
     </p>
 
     <p>
