--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,17 @@
             <img src="../assets/img/logoFgrHorizontal.png" width="100%" class="fade-in-logo">
         </header>
         <header class="grid-container-sesion-header" class="fade-in-logo">
-            <h1>S I S T E M A&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I N S T I T U C I O N A L</h1>
-            <h1>D E&nbsp;&nbsp;&nbsp;E V A L U A C I Ó N&nbsp;&nbsp;&nbsp;D E</h1>
-            <H1>R E S U L T A D O S</H1>
+            <h1>S I S T E M A&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I N S T I T U C I O N A L&nbsp;&nbsp;&nbsp;D E&nbsp;&nbsp;&nbsp;E V A L U A C I Ó N</h1>
+            <h1>D E&nbsp;&nbsp;&nbsp; R E S U L T A D O S</h1>
+            <H1></H1>
         </header>
         <header class="grid-container-sesion-user-" class="fade-in-logo">
-            <mat-card class="mat-card-sesion">
+
+            <mat-card class="mat-card-sesion" style="width: 75%; height: 75%;">
                 <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title class="mat-card-sesion-title">{{getName()}}</mat-card-title>
-                    <mat-card-subtitle>S I E R</mat-card-subtitle>
                 </mat-card-header>
-
                 <button mat-raised-button color="primary" type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
 
             </mat-card>
@@ -70,12 +69,12 @@
             <app-navbar></app-navbar>
 
         </nav>
-        <article class="grid-container-sesion-main">MAIN
+        <article class="grid-container-sesion-main" class="fade-in-logo" style="width: 120%;">
             <router-outlet></router-outlet>
         </article>
-        <footer class="grid-container-sesion-footer">FOOTER
+        <!-- <footer class="grid-container-sesion-footer">FOOTER
             <button type="button" class="btn btn-light" (click)="login() " *ngIf="!isLoggedIn() ">Iniciar Sesión</button>
-        </footer>
+        </footer> -->
 
     </body>
 </div>
@@ -97,11 +96,11 @@
                 <div class="box">
                     <div class="title">
                         <span class="block"></span>
-                        <h1>C O P L A D I I<span></span></h1>
+                        <h1>OM - SIER<span></span></h1>
                     </div>
                     <div class="role">
                         <div class="block"></div>
-                        <p>S A M - S I E R</p>
+                        <p>S I E R</p>
                     </div>
                 </div>
             </div>
