--- a/src/styles.css
+++ b/src/styles.css
@@ -249,3 +249,5 @@ body {
         bottom: 13px;
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
