--- a/src/app/components/carpetas-universo/carpetas-universo.component.html
+++ b/src/app/components/carpetas-universo/carpetas-universo.component.html
@@ -1,4 +1,4 @@
 <h2>Universo de Carpetas</h2>
 
-<ag-grid-angular id="myGrid" #agGrid style="width: 100%; height: 100%;" class="ag-theme-alpine" [rowData]="rowData | async" [columnDefs]="columnDefs" rowSelection="multiple" [enableRangeSelection]="true" [pagination]="true">
-</ag-grid-angular>
+<!-- <ag-grid-angular id="myGrid" #agGrid style="width: 100%; height: 100%;" class="ag-theme-alpine" [rowData]="rowData | async" [columnDefs]="columnDefs" rowSelection="multiple" [enableRangeSelection]="true" [pagination]="true">
+</ag-grid-angular> -->
