--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,76 +7,7 @@
     <button (click)="callMessages()">Emails</button>
     <tr>API Response: {{ apiResponse }}</tr> -->
 
-    <!-- Container Grid Sesion -->
-
-    <!-- <body class="grid-container-sesion">
-
-        <header class="grid-container-sesion-logo">
-            <img src="../assets/img/logoFgrHorizontal.png" width="100%" class="fade-in-logo">
-        </header>
-        <header class="grid-container-sesion-header" class="fade-in-logo">
-            <h1>S I S T E M A&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I N S T I T U C I O N A L&nbsp;&nbsp;&nbsp;D E&nbsp;&nbsp;&nbsp;E V A L U A C I Ó N</h1>
-            <h1>D E&nbsp;&nbsp;&nbsp; R E S U L T A D O S</h1>
-            <H1></H1>
-        </header>
-        <header class="grid-container-sesion-user-" class="fade-in-logo">
-
-            <mat-card class="mat-card-sesion" style="width: 75%; height: 75%;">
-                <mat-card-header>
-                    <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title class="mat-card-sesion-title">{{getName()}}</mat-card-title>
-                </mat-card-header>
-                <button mat-raised-button color="primary" type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
-
-            </mat-card>
-
-        </header>
-        <nav class="grid-container-sesion-navbar" class="fade-in-logo"> -->
-    <!--  <mat-nav-list>
-                <a mat-list-item routerLink="/home">
-                    <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>notes</mat-icon> <span class="nav-caption">SAM 01</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>edit</mat-icon> <span class="nav-caption">SAM 02</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>notes</mat-icon> <span class="nav-caption">SAM 03</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>notes</mat-icon> <span class="nav-caption">SAM 04</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>notes</mat-icon> <span class="nav-caption">SAM 05</span>
-                </a>
-                <a mat-list-item routerLink="/#">
-                    <mat-icon>notes</mat-icon> <span class="nav-caption">SAM 06</span>
-                </a> -->
-    <!-- <a mat-list-item routerLink="/#">
-                    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Owner Actions</span>
-                </a>
-                <a mat-list-item routerLink="#">
-                    <mat-icon>account_balance</mat-icon><span class="nav-caption">Account Actions</span>
-                </a>
-
-                <mat-icon>notes</mat-icon>
-                <mat-icon>edit</mat-icon>
-                <mat-icon>send</mat-icon>
-                <mat-icon>mail</mat-icon> -->
-    <!--  </mat-nav-list> -->
-    <!-- <app-navbar></app-navbar>
-
-        </nav>
-        <article class="grid-container-sesion-main" class="fade-in-logo" style="width: 120%;">
-            <router-outlet></router-outlet>
-        </article> -->
-    <!-- <footer class="grid-container-sesion-footer">FOOTER
-            <button type="button" class="btn btn-light" (click)="login() " *ngIf="!isLoggedIn() ">Iniciar Sesión</button>
-        </footer> -->
-
-    <!-- </body> -->
+    <!-- Main Sesion -->
 
     <body id="main">
         <div class="container-fluid">
@@ -85,18 +16,12 @@
                 <div class="col-xs-12 col-sm-6 col-md-2">
                     <app-navbar [nombreUsuario]="getName()" (cerrarSesion)="logout()"></app-navbar>
                 </div>
-                <div class="col-xs-6 col-md-10">Main</div>
-
-                <!-- Código opcional para limpiar las columnas XS en caso de que el
-             contenido de todas las columnas no coincida en altura -->
-                <!-- <div class="clearfix visible-xs"></div>
-            <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div> -->
-                <router-outlet></router-outlet>
+                <div class="col-xs-6 col-md-10">
+                    <router-outlet></router-outlet>
+                </div>
             </div>
-
         </div>
     </body>
-
 
 
 
