--- a/src/app/components/carpeta-investigacion/carpeta-investigacion.component.html
+++ b/src/app/components/carpeta-investigacion/carpeta-investigacion.component.html
@@ -1,60 +1,1 @@
-<h1>Carpetas de Investigación</h1>
-
-<mat-form-field appearance="fill">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilterCarpeta($event)" placeholder="Ex. ium" #input>
-</mat-form-field>
-
-<table mat-table [dataSource]="dataSourceCarpeta" class="mat-elevation-z8" matSort>
-
-    <!-- Id Column -->
-    <ng-container matColumnDef="ID_CARPETA">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.ID_CARPETA}} </td>
-    </ng-container>
-
-    <!-- Numero de Carpeta Column -->
-    <ng-container matColumnDef="NUM_CARPETA_INVESTIGACION">
-        <th class="header" mat-header-cell *matHeaderCellDef> Núm. Carpeta </th>
-        <td mat-cell *matCellDef="let element"> {{element.NUM_CARPETA_INVESTIGACION}} </td>
-    </ng-container>
-
-    <!-- Fecha de Inicio Column -->
-    <ng-container matColumnDef="FECHA_INICIO">
-        <th mat-header-cell *matHeaderCellDef> Fecha de Inicio </th>
-        <td mat-cell *matCellDef="let element"> {{element.FECHA_INICIO}} </td>
-    </ng-container>
-
-    <!-- Hora de Inicio Column -->
-    <ng-container matColumnDef="HORA_INICIO">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora Inicio </th>
-        <td mat-cell *matCellDef="let element"> {{element.HORA_INICIO}} </td>
-    </ng-container>
-
-    <!-- Sintesis Column -->
-    <ng-container matColumnDef="SINTESIS">
-        <th class="header" mat-header-cell *matHeaderCellDef> Síntesis</th>
-        <td mat-cell *matCellDef="let element"> {{element.SINTESIS}} </td>
-    </ng-container>
-
-    <!-- Delegacion Column -->
-    <ng-container matColumnDef="DELEGACION">
-        <th class="header" mat-header-cell *matHeaderCellDef> Delegación</th>
-        <td mat-cell *matCellDef="let element"> {{element.DELEGACION}} </td>
-    </ng-container>
-
-    <!-- Sede Column -->
-    <ng-container matColumnDef="SEDESUBSEDE">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Subsede </th>
-        <td mat-cell *matCellDef="let element"> {{element.SEDESUBSEDE}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumnsCarpeta"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnsCarpeta;"></tr>
-
-    <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-</table>
-
-<mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons aria-label="Seleciona La Página"></mat-paginator>
+<h1>Carpeta de Investigación</h1>
