--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 <div *ngIf="isLoggedIn() ; else notLogin ">
 
-    <!-- Respuesta API MSAL Perfil de usuario, Captura de Correos -->
-    <!--     <button type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
-    <a routerLink="restricted-page">Restricted</a>
-    <button (click)="callProfile()">Profile</button>
-    <button (click)="callMessages()">Emails</button>
-    <tr>API Response: {{ apiResponse }}</tr> -->
-
-    <!-- Main Sesion -->
+    <!-- </body> -->
 
     <body id="main">
         <div class="container-fluid">
@@ -20,84 +13,51 @@
                     <router-outlet></router-outlet>
                 </div>
             </div>
+
         </div>
     </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
-
-
-
-
-
-
-
-
-
-
 <ng-template #notLogin>
-
     <!-- Container Grid Login -->
 
-    <body class="grid-container-login">
-
-        <!-- Header Logo FGR -->
-        <header class="grid-container-login-header">
-            <img src="../assets/img/logoFgrHorizontal.png" width="35%" class="fade-in-logo">
-        </header>
-
-        <!-- Seccion Area COPLADII -->
-        <section class="grid-container-login-section">
-            <div class="container">
-                <div class="box">
-                    <div class="title">
-                        <span class="block"></span>
-                        <h1>OM - SIER<span></span></h1>
-                    </div>
-                    <div class="role">
-                        <div class="block"></div>
-                        <p>S I E R</p>
-                    </div>
-                </div>
+    <body id="container-notLogin">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-12" class="text-center">
+                <!-- Header Logo FGR -->
+                <header class="grid-container-login-header">
+                    <img src="../assets/img/logoFgrHorizontal.png" width="30%" class="fade-in-logo">
+                </header>
             </div>
-        </section>
-
-        <!-- Footer Boton Inicio de Sesión -->
-        <footer class="grid-container-login-footer">
-            <button mat-raised-button color="primary" (click)="login() " *ngIf="!isLoggedIn()">Iniciar Sesión</button>
-            <!-- <button type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
-            <td><a [routerLink]="[ '/public-page'] " routerLinkActive="true ">[PUBLIC-PAGE]</a></td>
-            <td><a [routerLink]="[ '/restricted-page'] " routerLinkActive="true " *ngIf="isLoggedIn() ">[RESTRICTED-PAGE]</a></td> -->
-        </footer>
+            <div class="col-xs-6 col-md-4">
+                <!-- Seccion Area COPLADII -->
+                <section class="grid-container-login-section">
+                    <div class="container">
+                        <div class="box">
+                            <div class="title">
+                                <span class="block"></span>
+                                <h1>OM - SIER<span></span></h1>
+                            </div>
+                            <div class="role">
+                                <div class="block"></div>
+                                <p>S I E R</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
 
     </body>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-12" class="text-center">
+            <button mat-raised-button color="primary" (click)="login() " *ngIf="!isLoggedIn()">Iniciar Sesión</button>
+            <!-- <button type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
+    <td><a [routerLink]="[ '/public-page'] " routerLinkActive="true ">[PUBLIC-PAGE]</a></td>
+    <td><a [routerLink]="[ '/restricted-page'] " routerLinkActive="true " *ngIf="isLoggedIn() ">[RESTRICTED-PAGE]</a></td> -->
+
+
+        </div>
+    </div>
 
 </ng-template>
