--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Menú Lateral -->
 
-<div id="sidemenu">
+<div id="sidemenu" class="fade-in-logo">
     <!-- header -->
     <div id="header-navbar" class="text-center">
         <div id="title-navbar"><span><strong>Bienvenido</strong></span></div>
@@ -8,7 +8,7 @@
 
     <!-- profile -->
     <div id="profile" class="text-center">
-        <div id="photo"><img src="../../../assets/img/user2.png" width="50%" alt=""></div>
+        <div id="photo"><img src="../../../assets/img/user2.png" width="40%" alt=""></div>
         <div id="name">
             <h3>{{nombreUsuario}}</h3>
             <button type="button" class="btn btn-danger" (click)="logout()">Cerrar Sesión</button>
@@ -19,6 +19,7 @@
     <!-- items -->
     <div id="menu-items">
         <div class="row">
-            <p-panelMenu [model]="items" [style]="{'width':'160px'}"></p-panelMenu>
+            <p-panelMenu [model]="items" [style]="{'width':'auto'}"></p-panelMenu>
         </div>
     </div>
+</div>
