18.-Call Profile, Call Emails

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,13 @@
                     <router-outlet></router-outlet>
                 </div>
             </div>
-
         </div>
+
+        <!--         <button (click)="callProfile()">Profile</button>
+
+        <button (click)="callMessages()">Emails</button>
+
+        <tr>API Response: {{ apiResponse }}</tr> -->
     </body>
 </div>
 
